assets/css/main.css
@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic");
@import url("fontawesome-all.min.css");

/*
	Astral by HTML5 UP
	html5up.net | @ajlkn
	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
*/

html, body, div, span, applet, object,
iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
pre, a, abbr, acronym, address, big, cite,
code, del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var, b,
u, i, center, dl, dt, dd, ol, ul, li, fieldset,
form, label, legend, table, caption, tbody,
tfoot, thead, tr, th, td, article, aside,
canvas, details, embed, figure, figcaption,
footer, header, hgroup, menu, nav, output, ruby,
section, summary, time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
  text-decoration: none;
}

#floatingR {
float: right;    
  margin-top: 15px;
  margin-left: 15px;
  margin-right: 0;
  margin-bottom: 15px;
}

#floatingL {
float: left;    
  margin-top: 15px;
  margin-left: 0;
  margin-right: 15px;
  margin-bottom: 15px;
}


#floatC {
  display: block;
  margin-top: 15px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 15px;
}

html, body, div, span, applet, object,
iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
pre, a, abbr, acronym, address, big, cite,
code, del, dfn, em, img, ins, {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;}

article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;}

body {
	line-height: 1;
}

ol, ul {
	list-style: none;
}

blockquote, q {
	quotes: none;
}

	blockquote:before, blockquote:after, q:before, q:after {
		content: '';
		content: none;
	}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

body {
	-webkit-text-size-adjust: none;
}

mark {
	background-color: transparent;
	color: inherit;
}

input::-moz-focus-inner {
	border: 0;
	padding: 0;
}

/* Row */

	.row {
		display: flex;
		flex-wrap: wrap;
		box-sizing: border-box;
		align-items: stretch;
	}

		.row > * {
			box-sizing: border-box;
		}

		.row.gtr-uniform > * > :last-child {
			margin-bottom: 0;
		}

		.row.aln-left {
			justify-content: flex-start;
		}

		.row.aln-center {
			justify-content: center;
		}

		.row.aln-right {
			justify-content: flex-end;
		}

		.row.aln-top {
			align-items: flex-start;
		}

		.row.aln-middle {
			align-items: center;
		}

		.row.aln-bottom {
			align-items: flex-end;
		}

		.row > .imp {
			order: -1;
		}

		.row > .col-1 {
			width: 8.33333%;
		}

		.row > .off-1 {
			margin-left: 8.33333%;
		}

		.row > .col-2 {
			width: 16.66667%;
		}

		.row > .off-2 {
			margin-left: 16.66667%;
		}

		.row > .col-3 {
			width: 25%;
		}

		.row > .off-3 {
			margin-left: 25%;
		}

		.row > .col-4 {
			width: 33.33333%;
		}

		.row > .off-4 {
			margin-left: 33.33333%;
		}

		.row > .col-5 {
			width: 41.66667%;
		}

		.row > .off-5 {
			margin-left: 41.66667%;
		}

		.row > .col-6 {
			width: 50%;
		}

		.row > .off-6 {
			margin-left: 50%;
		}

		.row > .col-7 {
			width: 58.33333%;
		}

		.row > .off-7 {
			margin-left: 58.33333%;
		}

		.row > .col-8 {
			width: 66.66667%;
		}

		.row > .off-8 {
			margin-left: 66.66667%;
		}

		.row > .col-9 {
			width: 75%;
		}

		.row > .off-9 {
			margin-left: 75%;
		}

		.row > .col-10 {
			width: 83.33333%;
		}

		.row > .off-10 {
			margin-left: 83.33333%;
		}

		.row > .col-11 {
			width: 91.66667%;
		}

		.row > .off-11 {
			margin-left: 91.66667%;
		}

		.row > .col-12 {
			width: 100%;
		}

		.row > .off-12 {
			margin-left: 100%;
		}

		.row.gtr-0 {
			margin-top: 0em;
			margin-left: 0em;
		}

			.row.gtr-0 > * {
				padding: 0em 0 0 0em;
			}

			.row.gtr-0.gtr-uniform {
				margin-top: 0em;
			}

				.row.gtr-0.gtr-uniform > * {
					padding-top: 0em;
				}

		.row.gtr-25 {
			margin-top: -0.3125em;
			margin-left: -0.3125em;
		}

			.row.gtr-25 > * {
				padding: 0.3125em 0 0 0.3125em;
			}

			.row.gtr-25.gtr-uniform {
				margin-top: -0.3125em;
			}

				.row.gtr-25.gtr-uniform > * {
					padding-top: 0.3125em;
				}

		.row.gtr-50 {
			margin-top: -0.625em;
			margin-left: -0.625em;
		}

			.row.gtr-50 > * {
				padding: 0.625em 0 0 0.625em;
			}

			.row.gtr-50.gtr-uniform {
				margin-top: -0.625em;
			}

				.row.gtr-50.gtr-uniform > * {
					padding-top: 0.625em;
				}

		.row {
			margin-top: -1.25em;
			margin-left: -1.25em;
		}

			.row > * {
				padding: 1.25em 0 0 1.25em;
			}

			.row.gtr-uniform {
				margin-top: -1.25em;
			}

				.row.gtr-uniform > * {
					padding-top: 1.25em;
				}

		.row.gtr-150 {
			margin-top: -1.875em;
			margin-left: -1.875em;
		}

			.row.gtr-150 > * {
				padding: 1.875em 0 0 1.875em;
			}

			.row.gtr-150.gtr-uniform {
				margin-top: -1.875em;
			}

				.row.gtr-150.gtr-uniform > * {
					padding-top: 1.875em;
				}

		.row.gtr-200 {
			margin-top: -2.5em;
			margin-left: -2.5em;
		}

			.row.gtr-200 > * {
				padding: 2.5em 0 0 2.5em;
			}

			.row.gtr-200.gtr-uniform {
				margin-top: -2.5em;
			}

				.row.gtr-200.gtr-uniform > * {
					padding-top: 2.5em;
				}
/* ... */

